...
    <string name="wizard_introduction">If you haven\'t already done so, register on the Cacophony website and create a group.</string>
    <string name="choose_mode_message">Select a mode to override the options selected in settings (uses most appropriate values).</string>
    <string name="location_not_set">GPS Location not set.</string>
    <string name="update_gps_location">Update GPS Location</string>

    <string name="help">Help</string>
    <string name="settings">Settings</string>


    <string name="device_id">Device ID:</string>

    <string name="gps_text">GPS location: </string>
    <string name="message_text">Messages: </string>message_text
    <string name="version">Version ID</string>

    <string name="testing_title">Settings for testing</string>
...
    <string name="enter_a_new_group_here">Enter a new Group Here</string>
    <string name="attempting_to_creat">Attempting to create user - please wait</string>
    <string name="Record_with_low_battery_is_ON">Record with low battery is ON</string>

    <string name="bird_count_message">Press the ? for an explanation of this feature.</string>
    <string name="basic_setup">Basic Setup</string>
    <string name="vitals">Vitals</string>
    <string name="five_minute_bird_count">5 min Bird Count</string>
    <string name="gps_location">GPS Location</string>
    <string name="advanced">Advanced</string>
    <string name="disable_recording">Disable Recording</string>
    <string name="enable_recording">Enable Recording</string>
    <string name="very_advanced">Very Advanced</string>
...
